service RestaurantService {
	rpc createRestaurant (Restaurant) returns (Restaurant); // send address, contact, and category, returns id
	// if sending address and contact with IDs, use those
	// otherwise, create them on the backend and return the ids for those, too
	rpc getRestaurant (Restaurant) returns (Restaurant); // send id, get whole thing
	rpc setRestaurant (Restaurant) returns (Restaurant); // send info desired to change, returns result
	rpc setCapacity (CapacityRequest) returns (CapacityResponse); 
	rpc setRTime (RTimeRequest) returns (RTimeResponse);
	rpc deleteRestaurant (Restaurant) (DeleteResponse);
	
}

message Restaurant {
	uint32 id = 1;
	Address address = 2;
	Contact contact = 3;
	uint32 category = 4;
}

message Address {
	uint32 id = 1;
	string name = 2;
	float latitude = 3;
	float longitude = 4;
	string line1 = 5;
	string line2 = 6;
	string city = 7;
	string state = 8;
	string zip = 9;
}

message Contact {
	uint32 id = 1;
	uint32 phone = 2;
	string email = 3;
}

message CapacityRequest {
	Restaurant target = 1;
	int capacity = 2;
}

message CapacityResponse {
}

message RTimeRequest {
	Restaurant target = 1;
	int rtime = 2;
}

message RTimeResponse {
}

message DeleteResponse {
}
